FIX contrast between art and artist

--- a/app/assets/stylesheets/components/_card-artwork.scss
+++ b/app/assets/stylesheets/components/_card-artwork.scss
@@ -66,3 +66,7 @@
   column-count: 2;
 
 }
+
+.artwork_title {
+  color:black;
+}
